[package]
name = "endless_sky_generator_web"
version = "0.1.0"
edition = "2024"

[lints.clippy]
nursery     = { level  = "deny", priority = -1 }
pedantic    = { level  = "deny", priority = -1 }
all         = { level  = "deny", priority = -1 }
unwrap_used = "deny"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "=0.2.105"
rawzip = "=0.4.1"
flate2 = "=1.1.5"
endless_sky_rw = { path = "./endless_sky_rw" }
