[package]
name = "endless_sky_generator_web"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[lints.clippy]
nursery     = { level  = "deny", priority = -1 }
pedantic    = { level  = "deny", priority = -1 }
all         = { level  = "deny", priority = -1 }
unwrap_used = "deny"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
wasm-bindgen = { version = "=0.2.126" }

[dependencies]
endless_sky_rw = { path = "./endless_sky_rw" }

rawzip = "=0.5.1"
flate2 = "=1.1.9"

[[bin]]
name = "full_map"

[[bin]]
name = "system_shuffler"

[[bin]]
name = "chaos"

[[bin]]
name = "random_galaxy"

[[bin]]
name = "page_generator"

[[bin]]
name = "list_stable_data_paths"
